fixed how background image shows on small screens

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     height: fit-content;
     background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(./img/IMG_3017.JPG);
     background-size: cover;
+    background-position: center;
     color: #FAF9F6;
 }
 
